Fixed Align and Size

--- a/styles.css
+++ b/styles.css
@@ -31,7 +31,8 @@ ul {
 
 img {
     display: block;
-    margin: auto;
+    margin-left: auto;
+    margin-right: auto;
 }
 
 img.float {
